# asf_v3

./: .env  Dockerfile  comandos.txt  docker-compose.yml  docker.cmd  pyproject.toml
app/: main.py  wait-for-it.sh
app/auth/: dependencies.py  jwt.py
app/db/: connection.py  depends.py
app/migrations/: env.py
app/migrations/versions/: 720a7fd59182_add.py
app/models/: models.py
app/repositories/: alocacao_repository.py  espacoinstituicao_repository.py  evento_repository.py  instituicao_repository.py  participacao_repository.py  pessoa_repository.py
app/routes/: aapp_router.py  alocacao_router.py  auth_router.py  espacoinstituicao_router.py  evento_router.py  instituicao_router.py  participacao_router.py  pessoa_router.py
app/schemas/: alocacao_schemas.py  espacaoinstituicao_schemas.py  evento_schemas.py  instituicao_schemas.py  participacao_schemas.py  pessoa_schemas.py  schemas.py  validation.py
app/services/: alocacao_service.py  espacoinstituicao_service.py  evento_service.py  instituicao_service.py  participacao_service.py  pessoa_service.py
migrations/: env.py
migrations/versions/: 1d3577367ccb_add_tablesv2.py  720a7fd59182_add.py  8fd0a7b54aaf_teste_de_aumento_de_char_em_tipo_.py  c1ea78c15d9b_adiciona_tabela_instituicao_social.py  d592762b30f6_atualização_de_tabela.py
